test/files/neg/t4749.check
t4749.scala:2: error: Fail1 has a main method with parameter type Array[String], but bippy.Fail1 will not be a runnable program.
  Reason: main method must have exact signature (Array[String])Unit
  object Fail1 {
         ^
t4749.scala:6: error: Fail2 has a main method with parameter type Array[String], but bippy.Fail2 will not be a runnable program.
  Reason: main methods cannot be generic.
  object Fail2 {
         ^
t4749.scala:13: error: Fail3 has a main method with parameter type Array[String], but bippy.Fail3 will not be a runnable program.
  Reason: main methods cannot refer to type parameters or abstract types.
  object Fail3 extends Bippy[Unit] { }
         ^
t4749.scala:16: error: Fail4 has a main method with parameter type Array[String], but bippy.Fail4 will not be a runnable program.
  Reason: companion is a trait, which means no static forwarder can be generated.

  object Fail4 {
         ^
t4749.scala:21: error: Fail5 has a main method with parameter type Array[String], but bippy.Fail5 will not be a runnable program.
  Reason: companion contains its own main method, which means no static forwarder can be generated.

  object Fail5 extends Fail5 { }    
         ^
t4749.scala:26: error: Fail6 has a main method with parameter type Array[String], but bippy.Fail6 will not be a runnable program.
  Reason: companion contains its own main method (implementation restriction: no main is allowed, regardless of signature), which means no static forwarder can be generated.

  object Fail6 {
         ^
6 errors found
